<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">协作助手</string>
    <string name="login_phone">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_fail">登陆失败，请重新登录</string>
    <string name="login_empty_phone">请输入手机号</string>
    <string name="login_empty_password">请输入密码</string>
    <string name="network_error">网络错误，请检查网络</string>
    <string name="title_activity_home">主界面</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_start">开始界面</string>
    <string name="title_activity_group_edit">编辑小组</string>
    <string name="drawer_search">查找好友</string>
    <string name="drawer_contact">联系好友</string>
    <string name="drawer_group">协作小组</string>
    <string name="drawer_bind">绑定社交账号</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_help">帮助</string>
    <string name="drawer_logout">退出</string>
    <string name="hint_search">输入关键词查询</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_search_list">搜索</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contact_manager">成员列表</string>
    <string name="title_activity_time_manager">时间安排</string>
    <string name="action_confirm_date">选择这个时间</string>
    <string name="action_new_time">添加时间段</string>
    <string name="action_graph">总结图表</string>
    <string name="action_delete">删除</string>
    <string name="action_add">添加小组</string>
    <string name="action_refresh">刷新小组列表</string>
    <string name="title_activity_time_manager_detail">时间段</string>
    <string name="title_activity_time_manager_day">日期段</string>
    <string name="title_activity_group_manager">小组管理</string>
    <string name="title_activity_group_info">小组信息</string>
    <string name="title_activity_member_info">成员信息</string>
    <string name="title_activity_graph_summary">概况</string>
    <string name="button_confirm">确定</string>
    <string name="title_activity_new_time">添加时间段</string>
    <string name="title_activity_new_member">添加小组成员</string>
    <string name="title_activity_member_activity">选择某个时间是否有空</string>
    <string name="title_activity_recommendation">推荐时间</string>
    <string name="itemdeleted">已删除</string>
    <string name="taptoundo">点击撤销删除</string>
    <string name="creator">创建者</string>
    <string name="memnum">小组人数</string>
    <string name="memnum_val">5</string>
    <string name="group_title">小组名称</string>
    <string name="creator_name">小组长</string>
    <string name="create_date">创建日期</string>
    <string name="create_date_val">2014/09/26</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_blog">BlogActivity</string>
    <string name="title_activity_bind_acitivity">BindAcitivity</string>
    <string name="title_activity_token">TokenActivity</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_contact_info">ContactInfoActivity</string>
    <string name="title_fragment_contacts">联系人</string>
    <string name="title_fragment_group">讨论组</string>
    <string name="title_fragment_search">搜索</string>
    <string name="new_group">新建小组</string>
    <string name="please_group">请输入小组名</string>
    <string name="button_cancel">取消</string>
    <string name="related_tweets">相关状态</string>
    <string name="related_posts">相关日志</string>
    <string name="no_related_user">无相关用户</string>
    <string name="found">搜索到</string>
    <string name="related_users">个相关用户</string>
    <string name="items">条</string>
    <string name="add_success">添加成功</string>
    <string name="add_failure">添加失败，该联系人已在小组中</string>
    <string name="remove_member">删除小组成员</string>
    <string name="alert">警告</string>
    <string name="remove_confirm">确定要删除该小组成员吗？</string>
    <string name="basic_info">基本信息</string>
    <string name="contact_info">联系方式</string>
    <string name="name">姓名</string>
    <string name="date_format_rec">yyyy年MM月dd日</string>
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>
    <string name="anytime">任意</string>
    <string name="custom">自定义</string>
    <string name="rec_confirm">以上述条件推荐时间</string>
    <string name="cond_set">条件设置</string>
    <string name="start_date">起始日期</string>
    <string name="date_range">日期范围</string>
    <string name="time_quantum">时间段</string>
    <string name="duration">持续时长</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="days">天内</string>
    <string name="hours">小时</string>
    <string name="available">有空闲的小组成员</string>
    <string name="unavailable">无法出席的小组成员</string>
    <string name="select_time">选择时间段</string>
    <string name="appointment">约定日期</string>
    <string name="group_member">小组成员</string>
    <string name="determine_time">决定一个时间！</string>
    <string name="time_undetermined">时间尚未确定</string>
    <string name="add_time">添加一个时间！</string>
    <string name="add_new">添加</string>
    <string name="remove_group_confirm">确定要删除小组吗？该项操作不可逆！</string>
    <string name="please_name">请填写小组名称</string>
    <string name="login_success">登陆成功</string>
    <string name="remove_group_success">成功删除小组</string>
    <string name="fetch_success">小组列表获取完毕</string>
    <string name="appoint_success">安排约定日期完成！</string>
    <string name="ts_description_title">活动描述</string>
    <string name="ts_description">请输入活动描述</string>

    <string name="phone">电话</string>
    <string name="sms">短信</string>
    <string name="weixin">微信</string>
    <string name="befriend">加好友</string>
    <string name="contact">推荐联系方式</string>
    <string name="contact_app_friend">已注册好友</string>
    <string name="contact_phone_friend">手机通讯录</string>
    <string name="contact_renren_friend">全部好友</string>
    <string name="drawer_notice">通知</string>
    <string name="error_field_required">该项为必填项</string>
    <string name="error_invalid_password">请输入相同的密码</string>
    <string name="login_confirm_password">请再次输入密码</string>
    <string name="login_email">请输入邮箱</string>
    <string name="login_nickname">请输入昵称</string>
    <string name="qq">QQ</string>
    <string name="rec_confirm_return">确认并返回</string>
    <string name="renren">人人</string>
    <string name="req_confirm">接受请求</string>
    <string name="req_cancel">拒绝请求</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="input_gmail">请输入Gmail邮箱地址</string>
    <string name="invite">邀请</string>
    <string name="title_activity_sign_up">注册</string>
    <string name="weibo">新浪微博</string>
    <string name="account_change_name">修改用户名</string>
    <string name="add_member_from_search">搜索</string>
    <string name="add_member_from_contacts">联系人</string>
    <string name="alert_google_mail">请输入Google邮箱</string>
    <string name="rec_confirm_question">确定选择这个时间段？</string>
    <string name="hint">提示</string>
    <string name="rec_no_result">没有满足条件的时间</string>
    <string name="minutes">分钟</string>
    <string name="len_title">持续时间</string>

</resources>
