<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.pku.assistant.SignUpActivity">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_singup_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <EditText android:id="@+id/nickname" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/login_nickname"
                android:maxLines="1" android:singleLine="true"/>

            <EditText android:id="@+id/phone" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/login_phone"
                android:inputType="phone"
                android:maxLines="1" android:singleLine="true"/>

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/login_empty_password"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/confirm_password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/login_confirm_password"
                android:inputType="textPassword" android:maxLines="1"
                android:singleLine="true"/>

            <EditText android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/login_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <Button android:id="@+id/sign_up_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/login_register"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>



