<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_phone"
        android:inputType="phone"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/login_phone"
        />

    <EditText
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/login_password"
        />
    <Button
        android:id="@+id/login_login"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/login_login"
        />
    <Button
        android:id="@+id/login_register"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/login_register"
        />
</LinearLayout>
