<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/card_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <ImageView
            android:id="@+id/thumbnail_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:background="@android:color/holo_blue_light"/>
        <Button
            android:id="@+id/add_button"
            android:layout_width="64dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/add_new"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_add_selector"/>

        <LinearLayout
            android:id="@+id/information"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/thumbnail_image"
            android:layout_toLeftOf="@id/add_button">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary"
                android:text="单旭东" />
            <TextView
                android:id="@+id/userid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondaryInverse"
                android:text="PKU"/>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#20000000" />

    <LinearLayout
        android:id="@+id/card_footer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <LinearLayout
            android:id="@+id/layout_state_number"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true">
            <TextView
                android:id="@+id/state_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/related_tweets"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#20000000" />

        <LinearLayout
            android:id="@+id/search_blog_number"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true">
            <TextView
                android:id="@+id/blog_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/related_posts"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>